# slr-gbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES  log.txt  lv_conf.h
GenaV3/: devlog.txt  generator.py  grammar.py  main.py  parser.py  paths.py  regexes.py  rules.txt
cmake/: tests.cmake
config/: default_config.json
docs/: Hardware_setup.md  Software_setup.md  TODO.txt  TODO2.txt  devlog.txt  hints.txt  rework_plan.txt
docs/dto/: info.txt  slraudio.dtbo  slraudio.dts
docs/stm/: clocker.hex
docs/stm/clocker/: .cproject  .project  Debug_STM32F411CE_FLASH.ld  clocker.elf.launch  stm32_flash.ld  system_stm32f4xx.c
docs/stm/clocker/Debug/: clocker.elf  clocker.list  clocker.map
docs/stm/clocker/src/: i2s.c  i2s.h  main.c  (+5 more)
inc/: Status.h  defines.h  evgen_defines.h  logger.h  main.h  slr_config.h  utility.h
inc/common/: FileWork.h  Status.h  Version.h
inc/core/: AudioBufferManager.h  AudioPeakBuilder.h  BufferManager.h  CEHandlerTables.h  ControlEngine.h  Events.h  FileTasks.h  FileWorker.h  FlatEvents.h  Metronome.h  MetronomeEventsGen.h  MidiController.h  MidiControllerEventsGen.h  Mixer.h  ModuleManager.h  Plugin.h  Project.h  ProjectEventsGen.h  RTHandlerTable.h  RtEngine.h  SettingsManager.h  Timeline.h  TimelineEventsGen.h  UndoRedo.h
inc/core/drivers/: AudioDriver.h  dummyDriver.h  jackDriver.h
inc/core/primitives/: AudioBuffer.h  AudioContext.h  AudioFile.h  AudioPeakFile.h  AudioPeaks.h  AudioRoute.h  AudioUnit.h  AudioUnitEventsGen.h  Buffer.h  ClipContainer.h  ControlContext.h  File.h  FileContainer.h  FixedVector.h  MidiBuffer.h  MidiEvent.h  MidiFile.h  MidiPort.h  MidiRoute.h  Parameter.h  ParameterArray.h  RenderPlan.h  RenderPlanEventsGen.h  SPSCQueue.h  Task.h
inc/core/templates/: CEHandlerTables_template.h  Events_template.h  FlatEvents_template.h  RTHandlerTable_template.h
inc/core/utility/: basicAudioManipulation.h  basicMidiManipulation.h  helper.h
inc/push/: BoundingBox.h  Color.h  PushButtonLayoutBase.h  PushContext.h  PushCore.h  PushDisplay.h  PushDisplayInterface.h  PushFaker.h  PushFonts.h  PushLeds.h  PushLib.h  PushMidi.h  PushPadLayout.h  PushPadLayoutBase.h  PushPads.h  PushPainter.h  PushSysex.h  Vec2.h  Widget.h  helper.h
inc/snapshots/: AudioUnitView.h  DriverView.h  FileContainerView.h  ParameterArrayView.h  ParameterView.h  ProjectView.h  TimelineView.h
inc/ui/: FakeGestures.h  PushUIDefines.h  guiThread.h  pushThread.h  uiControls.h  uiutility.h
inc/ui/display/: BottomPanel.h  Browser.h  DialogWindows.h  GridView.h  MainWindow.h  ModuleView.h  NewModulePopup.h  PopupManager.h  RouteManager.h  ScreenKeyboard.h  SettingsPopup.h  SplashScreen.h  Timeline.h  TimelinePopup.h  TopPanel.h  VirtualMidiKeyboard.h  defaultColors.h  defaultStyles.h  layoutSizes.h
inc/ui/push/: BrowserWidget.h  EditorWidget.h  GridWidget.h  MainWidget.h  MainWindow.h  ModuleWidget.h  PadLayoutSelector.h  PadLayoutWidget.h  PadNoteLayout.h  PushUIContext.h  RootWidget.h  UnitWidget.h
modules/: CMakeLists.txt
modules/Mixer/: Mixer.cpp  Mixer.h  MixerModule.cpp  MixerModule.h  MixerPushUI.cpp  MixerPushUI.h  MixerUI.cpp  MixerUI.h  MixerView.cpp  MixerView.h
modules/Sampler/: Sampler.cpp  Sampler.h  SamplerEventsGen.h  SamplerModule.cpp  SamplerModule.h  SamplerPushUI.cpp  SamplerPushUI.h  SamplerUI.cpp  SamplerUI.h  SamplerView.cpp  SamplerView.h
modules/Sampler/Events/: LoadAsset.h
modules/SimpleOscillator/: SimpleOsc.cpp  SimpleOsc.h  SimpleOscModule.cpp  SimpleOscModule.h  SimpleOscPushUI.cpp  SimpleOscPushUI.h  SimpleOscUI.cpp  SimpleOscUI.h  SimpleOscView.cpp  SimpleOscView.h
modules/Track/: Track.cpp  Track.h  TrackEventsGen.h  TrackModule.cpp  TrackModule.h  TrackPushUI.cpp  TrackPushUI.h  TrackUI.cpp  TrackUI.h  TrackView.cpp  TrackView.h
modules/Track/Events/: DumpRecordedAudio.h  ModifyContainerItem.h  OpenFile.h  RecordArm.h  ReinitRecord.h  RemoveFile.h  SwapContainer.h
shared/: Color.h  MIDIEvent.h
src/: defines.cpp  main.cpp
src/core/: AudioBufferManager.cpp  AudioPeakBuilder.cpp  BufferManager.cpp  ControlEngine.cpp  Events.cpp  FileTasks.cpp  FileWorker.cpp  Metronome.cpp  MidiController.cpp  Mixer.cpp  ModuleManager.cpp  Plugin.cpp  Project.cpp  RtEngine.cpp  SettingsManager.cpp  Timeline.cpp
src/core/drivers/: AudioDriver.cpp  dummyDriver.cpp  jackDriver.cpp
src/core/primitives/: AudioBuffer.cpp  AudioFile.cpp  AudioPeakFile.cpp  AudioPeaks.cpp  AudioUnit.cpp  ControlContext.cpp  File.cpp  FileContainer.cpp  MidiFile.cpp  MidiPort.cpp  Parameter.cpp  ParameterArray.cpp  RenderPlan.cpp
src/core/utility/: basicAudioManipulation.cpp  basicMidiManipulation.cpp
src/push/: PushContext.cpp  PushCore.cpp  PushDisplay.cpp  PushDisplayInterface.cpp  PushFaker.cpp  PushFonts.cpp  PushLeds.cpp  PushMidi.cpp  PushPadLayout.cpp  PushPads.cpp  PushPainter.cpp  PushSysex.cpp  Widget.cpp
src/snapshots/: AudioUnitView.cpp  DriverView.cpp  FileContainerView.cpp  ParameterArrayView.cpp  ParameterView.cpp  ProjectView.cpp  TimelineView.cpp
src/ui/: FakeGestures.cpp  guiThread.cpp  pushThread.cpp  uiControls.cpp
src/ui/display/: BottomPanel.cpp  Browser.cpp  DialogWindows.cpp  GridView.cpp  MainWindow.cpp  ModuleView.cpp  NewModulePopup.cpp  PopupManager.cpp  RouteManager.cpp  ScreenKeyboard.cpp  SettingsPopup.cpp  SplashScreen.cpp  Timeline.cpp  TimelinePopup.cpp  TopPanel.cpp  VirtualMidiKeyboard.cpp  defaultColors.cpp  defaultStyles.cpp
src/ui/push/: BrowserWidget.cpp  GridWidget.cpp  MainWidget.cpp  MainWindow.cpp  ModuleWidget.cpp  PadLayoutSelector.cpp  PadLayoutWidget.cpp  PadNoteLayout.cpp  PushUIContext.cpp  RootWidget.cpp  UnitWidget.cpp
tests/testfiles/: midi_export.mid  midi_export_multitrack.mid  midi_test_1.mid
tests/unit/: CMakeLists.txt  testAudioBuffer.cpp  testAudioBufferManager.cpp  testAudioEdit.cpp  testAudioFile.cpp  testAudioPeaks.cpp  testBasicAudioManipulation.cpp  testBufferManager.cpp  testControlEngine.cpp  testFileWorker.cpp  testMidiFile.cpp  testRenderPlan.cpp  testSmth.cpp  testhelper.h
tests/unit/primitives/: CMakeLists.txt  testFixedVector.cpp
(+100 files in other folders)
